--- a/vessel_utilize/aws/aws_check_one_off_prediction.ipynb
+++ b/vessel_utilize/aws/aws_check_one_off_prediction.ipynb
@@ -1,21 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -46,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
     "import sklearn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -94,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +208,7 @@
     "            Defaults to None.\n",
     "    \"\"\"\n",
     "    print(f\"--------------- START: Check an one-off prediction ----------------\")\n",
+    "    warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "    if target is None:\n",
     "        print(f\"No target's name...\")\n",
     "        pass\n",
@@ -237,16 +222,47 @@
     "        model_name = \"XGBRegressor-teu_estimated_9ffee2d3fa3d469ea7bfc9df7e5d317f\"\n",
     "        \n",
     "        \n",
-    "    model = load_model(bucket=bucket, model_name=model_name)\n",
+    "    model = load_model(bucket=\"ft-mlops\", model_name=model_name)\n",
     "    predict_example_df(model, target)\n",
     "    print(f\"!!! DONE: an one-off prediction passed !!!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------- START: Check an one-off prediction ----------------\n",
+      "Target is: <vu_estimated>\n",
+      "Load model...\n",
+      "Load data...\n",
+      "\n",
+      "Test example w/ 1 instances:\n",
+      "   ais_dim_a  ais_dim_b  ais_dim_c  ais_dim_d  draught_fact\n",
+      "0      150.0       53.0        7.0       20.0           7.8\n",
+      "\n",
+      "Real Value: [0.2432875019516509]\n",
+      "Predicted Value: [0.24320531]\n",
+      "Mean Absolute Ratio Error: 0.0003378432381727954\n",
+      "\n",
+      "\n",
+      "Test example w/ 2 instances:\n",
+      "     ais_dim_a  ais_dim_b  ais_dim_c  ais_dim_d  draught_fact\n",
+      "600      154.0       49.0        3.0       23.0           9.7\n",
+      "800      170.0       20.0       21.0        7.0          10.2\n",
+      "\n",
+      "Real Value: [0.4631891770538467, 0.8733295127026977]\n",
+      "Predicted Value: [0.46559918, 0.8723557]\n",
+      "Mean Absolute Ratio Error: 0.0031590602840265527\n",
+      "\n",
+      "!!! DONE: an one-off prediction passed !!!\n"
+     ]
+    }
+   ],
    "source": [
     "# To test perdiction for <vu_estimated>\n",
     "main(target=\"vu_estimated\")"
@@ -254,13 +270,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------- START: Check an one-off prediction ----------------\n",
+      "Target is: <teu_estimated>\n",
+      "Load model...\n",
+      "Load data...\n",
+      "\n",
+      "Test example w/ 1 instances:\n",
+      "   ais_dim_a  ais_dim_b  ais_dim_c  ais_dim_d  draught_fact\n",
+      "0      150.0       53.0        7.0       20.0           7.8\n",
+      "\n",
+      "Real Value: [349.84742780647395]\n",
+      "Predicted Value: [351.7416]\n",
+      "Mean Absolute Ratio Error: 0.005414302661643374\n",
+      "\n",
+      "\n",
+      "Test example w/ 2 instances:\n",
+      "     ais_dim_a  ais_dim_b  ais_dim_c  ais_dim_d  draught_fact\n",
+      "600      154.0       49.0        3.0       23.0           9.7\n",
+      "800      170.0       20.0       21.0        7.0          10.2\n",
+      "\n",
+      "Real Value: [580.8392280255238, 1640.9861543683692]\n",
+      "Predicted Value: [560.57855, 1582.0873]\n",
+      "Mean Absolute Ratio Error: 0.03538704636646764\n",
+      "\n",
+      "!!! DONE: an one-off prediction passed !!!\n"
+     ]
+    }
+   ],
    "source": [
     "# To test perdiction for <teu_estimated>\n",
     "main(target=\"teu_estimated\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "conda_python3",
+   "language": "python",
+   "name": "conda_python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
