--- a/vessel_utilize/aws/aws_check_one_off_prediction.ipynb
+++ b/vessel_utilize/aws/aws_check_one_off_prediction.ipynb
@@ -309,20 +309,13 @@
     "# To test perdiction for <teu_estimated>\n",
     "main(target=\"teu_estimated\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -334,7 +327,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fbc5010254556363c1187b516590dd0be27eb30c63035d71a581267f0548eb3b"
+   }
   }
  },
  "nbformat": 4,
